--- a/css/sass/modules/_grid.scss
+++ b/css/sass/modules/_grid.scss
@@ -75,6 +75,12 @@ align-self-end{
       position: relative;
       top:0px;
     }
+    .full-block{
+      width: 100%;
+      display: block;
+      padding-right: 80px;
+      padding-left:80px;
+    }
 }
 @media (min-width: 1200px) {
     .collapse.dont-collapse-xl {
