--- a/css/sass/modules/_pages.scss
+++ b/css/sass/modules/_pages.scss
@@ -78,7 +78,7 @@ main{
     background-color: #ffffff;
 }
 main.main-wrapper{
-    margin-top:90px;
+    margin-top:75px;
 }
 // .line-height-close{
 //     line-height: 1.2em;
