--- a/css/sass/modules/pages/_home.scss
+++ b/css/sass/modules/pages/_home.scss
@@ -393,13 +393,24 @@
                 padding-top:0px;    
                 .slider-title{
                     font-size: 42px;
+                    padding-top: 40px;
+                }
+            }
+            .slider1{
+                background-color: unset;
+                background-repeat: no-repeat;
+                background-size: cover;
+                background-position: center top;
+                background-image: url('../images/homesliders/bettertranslate.png');
+                p{
+                    text-align: center;
                 }
             }
         }
     
         .slider-overlapped-cards{
             position: relative;
-            margin-top: -300px;
+            margin-top: -400px;
             .card{
                 margin-right:50px;
                 
